[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tingshuo"
dynamic = ["version"]
description = "Generate SRT/LRC subtitles from audio/video files using multiple STT engines with optional LLM polishing"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "TingShuo Team", email = "wedonotuse@outlook.com"},
]
keywords = ["subtitle", "srt", "lrc", "speech-to-text", "whisper", "vosk", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.0.0"]
vosk = ["vosk>=0.3.45"]
whisper = ["openai-whisper>=20231117"]
whisper-cpp = ["pywhispercpp>=1.0.0"]
nlp = ["nltk>=3.8"]
translation = ["transformers>=4.30.0", "sentencepiece>=0.1.99"]
all = [
    "faster-whisper>=1.0.0",
    "vosk>=0.3.45",
    "openai-whisper>=20231117",
    "pywhispercpp>=1.0.0",
    "nltk>=3.8",
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
]

[project.urls]
Homepage = "https://github.com/cycleuser/TingShuo"
Repository = "https://github.com/cycleuser/TingShuo"
Issues = "https://github.com/cycleuser/TingShuo/issues"

[project.scripts]
tingshuo = "tingshuo:main"

[tool.setuptools]
py-modules = ["tingshuo"]

[tool.setuptools.dynamic]
version = {attr = "tingshuo.__version__"}
